# llmkg

./: Experiments.ipynb  LICENCE  Proof of Concept.ipynb  README.md  build_package.sh  env.yml  envir.yml  environment.yml  graphs.py  models.py  plot_results.py  requirements.txt  results_BERT_FB15k-237_15x1000.txt  results_BERT_FB15k-237_25x1000.txt  results_BERT_bert-base-cased_FB15k-237_25x1000.txt  results_BERT_bert-base-cased_WN18RR_25x1000.txt  results_BERT_roberta-base_FB15k-237_25x1000.txt  results_BERT_roberta-base_WN18RR_10x100.txt  results_GPT2_gpt2-large_FB15k-237_25x1000.txt  results_GPT2_gpt2-large_WN18RR_25x1000.txt  results_GPT2_gpt2_WN18RR_25x1000.txt  run_experiment.py  setup.cfg  utils.py
.ipynb_checkpoints/: Experiments-checkpoint.ipynb  Proof of Concept-checkpoint.ipynb
data/FB15k-237/: relation_mapping.json
llmkg/: __init__.py  models.py  utils.py
llmkg/llmkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: Analysis.ipynb  Experiments.ipynb  Proof of Concept.ipynb
results/: results_BERT_FB15k-237_10x1000.txt  results_BERT_FB15k-237_50x10.txt  results_BERT_bert-base-cased_WN18RR_10x100.txt  results_BERT_roberta-base_WN18RR_25x1000.txt  results_GPT2_FB15k-237_10x100.txt  results_GPT2_gpt2-large_WN18RR_25x1000.txt  results_GPT2_gpt2_WN18RR_10x100.txt
results/old/: results_BERT_FB15k-237_10x100.txt  results_GPT2_gpt2-large_FB15k-237_10x100.txt  results_GPT2_gpt2-large_WN18RR_10x100.txt
results/raw_25x1000/: results_GPT2_gpt2_FB15k-237_25x1000.txt
scripts/: plot_results.py
src/: graphs.py  utils.py
(+7 files in other folders)
