[metadata]
name = llmkg
version = 0.0.5
author = Federico Reyes Gomez
author_email = frg100@cs.stanford.edu
description = A library for evaluating Language Models using Knowledge Graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frg100/llm-kg-eval
project_urls =
    Bug Tracker = https://github.com/frg100/llm-kg-eval/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = llmkg
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    torch>=1.10.0
    tqdm
    seaborn
    matplotlib
    transformers==4.17.0
    happytransformer==2.4.1
include_package_data = True

[options.packages.find]
where = llmkg
